Update migration baseline version to 0.1.1
Updated baseline version and last reviewed date in the migration instructions. Adjusted unsupported scope version and added clarification on validation prerequisites.